WebSearchableEquipmentDatabase/equipment/static/dataTable/dataTable.css
.filterList {
    list-style: none;
}

ul {
    list-style-type: none;
    padding: 0;
    margin: 0;
}

td {
    overflow: hidden;
    text-overflow: ellipsis;
    white-space: nowrap;
    max-width: 100px;
}

td:nth-child(1) {
    max-width: 200px;
    cursor: pointer;
}
td:nth-child(2) {
    max-width: 300px;
    cursor: pointer;
}

.filter-label {
    font-weight: bold;
}

label {
    margin-bottom: 0;
}

.check-options:hover {
    cursor: pointer;
}

.apply-filters-button {
    flex: 1;
    border: none;
    background-color: rgb(198, 78, 36);
    color: white;

}

.apply-filters-button:hover {
    background-color: rgb(173, 61, 27);
    color: white;
}

.control-button {
    text-decoration: none;
    color: gray;

}

.control-button:hover {
    cursor: pointer;
}

.removeEquipmentButton:hover {
    color: red;
}

.editEquipmentButton:hover {
    color: rgb(198, 78, 36);
}

.controls {
    display: flex;
    align-items: center;
    justify-content: center;

}

.save-button {
    border-radius: 5px;
    border: none;
    background-color: rgb(198, 78, 36);
    color: white;

}

.save-button:hover {
    background-color: rgb(173, 61, 27);
    color: white;
}

.details {
    display: flex;
    justify-content: space-between;
    margin-bottom: 30px;
}

.details > div:nth-child(2) {
    text-align: center;
}
.details > div:nth-child(3) {
    text-align: right;
}

